Correção no menu do Eclipse

--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 [workspaces]
-path=
+path=/home/aloisio/Dev/Workbench/Projetos/Insistemas
 
 [eclipse]
-path=
+path=/home/aloisio/Dev/Workbench/eclipse
